# ECE451-Parallel

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md  README.md  TODO.md  amarel_instructions.md  amarel_instructions.md~  parallel_hackathon_lastclass.md  processors.md  syllabus.md  syllabus2023.md
algos/: sortnet.s  testmacro.s
archive/: Fall21_Lecture0_Why_Parallel_Why_Distributed.ppt  Fall21_Lecture1_whyparallelism_Maria_Extra.ppt  parallel_hackathon_lastclass.md  processors.md  syllabus2023.md
archive/hw/: GravitySimulator.md  Mandelbrot_GPU.md
archive/project-gutenberg-data/: pg108.txt  pg11703.txt  pg1184.txt  pg120.txt  pg1342.txt  pg1399.txt  pg161.txt  pg1661.txt  pg2600.txt  pg42078.txt  pg521.txt  pg834.txt
archive/project-gutenberg-data/books/: 11-0.txt  1155-0.txt  1184-0.txt  120-0.txt  1237-0.txt  140-0.txt  145-0.txt  158-0.txt  16-0.txt  203-0.txt  205-0.txt  219-0.txt  244-0.txt  25344-0.txt  2591-0.txt  2600-0.txt  27942-0.txt  28054-0.txt  2852-0.txt  3176-0.txt  36-0.txt  41-0.txt  43-0.txt  4300-0.txt  46-0.txt  56817-0.txt  58585-0.txt  58866-0.txt  60364-0.txt  60378-0.txt  60392-0.txt  6688-0.txt  74-0.txt  76-0.txt  766-0.txt  829-0.txt  863-0.txt  940-0.txt  Anna_Karenina_LeoTolstoy.txt  Anne-of-Green-Gables.txt  (+58 more)
archive/sessions/01/: countPrimesBruteForceSIngleThreaded.cpp  (+6 more)
c++/: 02Matrix.cpp  03Matrix.cpp  04Matrix.cpp  C++Notes.md  Matrix.cpp  a.out  storagespecifiers.cpp
cpp-reference/: 02Matrix.cpp  03Matrix.cpp  04Matrix.cpp  Matrix.cpp  storagespecifiers.cpp
data/: pg108.txt  pg11703.txt  pg1184.txt  pg120.txt  pg1342.txt  pg1399.txt  pg161.txt  pg1661.txt  pg42078.txt  pg521.txt  pg834.txt
data/books/: 11-0.txt  1155-0.txt  1184-0.txt  1237-0.txt  145-0.txt  205-0.txt  219-0.txt  25344-0.txt  27942-0.txt  28054-0.txt  2852-0.txt  3176-0.txt  56817-0.txt  58585-0.txt  58866-0.txt  60364-0.txt  60378-0.txt  60392-0.txt  6688-0.txt  829-0.txt  863-0.txt  940-0.txt  Anna_Karenina_LeoTolstoy.txt  Collected_Speeches_FrederickDouglass.txt  Death_at_the_Excelsior_PGWodehouse.txt  French_Revolution_ThomasCarlyle.txt  From_Newton_to_Einstein_BenjaminHarrow.txt  Great_Expectations_CharlesDickens.txt  Household_Stories_BrothersGrimm.txt  Leaves_of_Grass_WaltWhitman.txt  My_Man_Jeeves_PGWodehouse.txt  Slavery-and-the-Constitution.txt  The-Call-of-Cthulhu.txt  The_Conduct_of_Life_RalphWaldoEmerson.txt  Zarlah_the_Martian_RNormanGrisewood.txt  pg10554.txt  pg11030.txt  pg1232.txt  pg1254.txt  pg128.txt  (+24 more)
exam-review/final/: 01_omp_parallel.cpp  02openmp.cpp  03final.cu
exam-review/test1/: avx_instructions_test1.cpp  memorytimings.cpp  simd.cpp  unoptimized_code.cpp
exam-review/test2/: mult.cu  test2.md
homework/: HW0.cpp  HW1.md  HW2.md  HW4.md
references/c++/: 02Matrix.cpp  03Matrix.cpp  04Matrix.cpp  C++ Notes.md  Matrix.cpp  storagespecifiers.cpp
sessions/01/: 00first.cpp  01threads.cpp  02account.cpp  03account_synchro.cpp  hw0.cpp
sessions/02/: 00multithread_prime_brute.cpp  03eratosthenes.cpp  04_hopefullyworking_primes.cpp  05_testing_optimization.cpp  Assembler_overview.md  HW1.md  assembler_overview.cpp  assembler_overview.o.txt  assembler_overview_O2.o.txt  assembler_overview_O3.o.txt  assembly_overview.cpp  assembly_overview.md  eratosthenes.cpp  examplesum.cpp  examplesum.cpp.cpp
sessions/03/: 00_eratosthenes.cpp  00_improved_eratosthenes.cpp  00_simple_eratosthenes.cpp  01_better_eratosthenes.cpp  02_bitwise_eratosthenes.cpp  03_racecondition.cpp  03_syncronization.cpp  04_synchronization.cpp  05_dict.cpp  HW2_super_eratosthenes.md  Makefile  a.out  examining_intrinsics.cpp  hw3_countwords.cpp  hwsort8col  matrix.cpp  mergiesort..cpp  prime_scratchwork.md  primebits.cpp  sortinghomework.cpp  sortinghomework_asm.s  triephrases.cpp
sessions/04/: asmbenchmarks.s  benchmem  memory_access.cpp
sessions/05/: 00simd.cpp  01_dotproduct.cpp  euler.cpp  openmp.cpp  void mandel_ex.cpp  void_mandel_ex.cpp
sessions/06/: .#floatingpoint.txt  IntelHyperthreading.md  IntelHyperthreading.md~  a.out  agenda.txt~  benchmark_assembler_mem.cpp  benchmark_assembly_mem.cpp  benchmarks.cpp  hw4.md  memory_timings.s  overview_parallel.md  sortingnetwork.s  test.s  test.s~  testasm.s
sessions/07/: # SOrting Applications.md  00b_mandelbrot_hw_hints.cpp  00mandelbrot.cpp  01testsimd.cpp  02sortingnetwork.cpp  03vectorization.cpp  ExampleProblems.md.cpp  Sorting Applications.md  scope.cpp  sortfuncs.s  test_intrinsics.cpp
sessions/08/: memory_perf.cpp  memory_reading.s
sessions/08memoryperformance/: memory_perf.cpp  memory_reading.s
sessions/09/: memfuncs.cpp  memorybenchmarks.cpp  test1review.md  todo.txt
sessions/09test1review/: memfuncs.cpp  memorybenchmarks.cpp  test1review.md
sessions/10/: 04matrix_styles.cpp  Makefile  benchmark.hpp  checkcpu.sh  gravsim0.cpp  mpi_advection.cpp~  segmentedsieve.txt
sessions/10openmp/: 04matrix_styles  04matrix_styles.cpp  benchmark.hpp  checkcpu.sh  gravsim0.cpp
sessions/11/: gameoflife_bitwise.cpp
sessions/12/: demo_omp.cpp
sessions/13/: SolarSystem2.cpp  plotsolar.py  plotsolar2.py  solar_system.cpp
sessions/14/: Review_Rules_Memory.md  a.out  benchmark_threaded_memory.cc~  cplusplus_naming_rules.cpp  floating_point.cpp  merge.cpp
sessions/14reviewmemory_cuda/: cplusplus_naming_rules.cpp  floating_point.cpp~  merge.cpp
sessions/15/: 03_cuda.cu  04_eratosthenes_bad.cu  blur.cu  cuda_sum.cu  displaycapabilities.cu  matmul.cu  simplesort.cu  squares.cu
sessions/15cuda/: 03_cuda.cu  04_eratosthenes_bad.cu  blur.cu  cuda_sum.cu  matmul.cu  simplesort.cu  squares.cu
sessions/16MPI/: #game_of_life.cpp#  game_of_life.cpp  game_of_life.cpp~
sessions/17/: GameOfLife  GameOfLife.cpp  GameOfLife_mpi.cpp  GameOfLife_mpi.cpp.cpp  Makefile
sessions/19/: GameOfLife_mpi.cpp
sessions/20/: neural_tb.sv  neuron.sv
sessions/reviewfinal/: 01_omp_parallel.cpp  02openmp.cpp  03final.cu
sessions/reviewtest1/: a.out  avx_instructions_test1.cpp  memorytimings.cpp  simd.cpp  unoptimized_code.cpp
sessions/reviewtest2/: mult.cu  test2.md
xp/: a.out  sortnet.s
(+157 files in other folders)
